view/journal.css
@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,200,300italic,400,600,600italic');

* { margin: 0; padding: 0; }

/**
 * Typography
 */

h1, nav h2, main > h2:first-child {
    position: absolute;
    top: -9999em;
    left: -9999em;
}

body {
    font: 300 110%/1.5 'Source Sans Pro', 'Microsoft YaHei', DengXian, sans-serif;
}

main h1 {
    position: static;
    font-size: 3em;
    font-weight: 200;
    letter-spacing: -3px;
}

aside p, aside ul, aside ol, aside h2, aside h3, aside h4, aside h5, aside h6,
aside blockquote, aside pre {
    margin: 1em 0;
}

aside ul, aside ol {
    margin-left: 1.5em;
}

h2 {
    font-size: 2em;
    font-weight: 200;
    letter-spacing: -2px;
}

img {
    vertical-align: bottom;
}

a {
        color: inherit;
        opacity: .5;
        transition: opacity .2s;
    }
    a:hover, a:focus {
        opacity: 1;
}

strong {
    font-weight: 600;
}

sup, sub {
    font-size: .9em;
}

/**
 * Layout
 */

html, body {
    min-height: 100%;
}

body {
    background: #26292C;
    color: white;
}

nav, main {
    display: block;
}

nav {
        box-sizing: border-box;
        position: fixed;
        left: 0;
        top: 0;
        height: 100%;
        width: 200px;
        padding: 30px;
        overflow: auto;
        background: #181818;
        transition: background .5s, color .2s, border-color .2s;
    }
    nav img {
        display: block;
        position: absolute;
        left: 50%;
        bottom: 30px;
        transform: translateX(-50%);
        opacity: .4;
    }
    nav ol {
        list-style: none;
    }
    nav li {
        position: relative;
        margin-bottom: .5em;
    }
    nav li a {
        display: inline-block;
        line-height: 1.2;
        font-weight: 400;
        opacity: 1;
        text-decoration: none;
        transition: color .2s;
    }
    nav li a:hover, nav li.current a:hover {
        color: white;
        border-color: white;
    }
    nav li.current {
        margin-bottom: 1em;
    }
    nav li.current a {
        border-bottom: 1px solid;
        margin-bottom: 10px;
        transition: color .2s, border-color .2s;
    }
    nav li.current::before {
        content: '';
        display: block;
        border-left: 10px solid;
        border-top: 8px solid transparent;
        border-bottom: 8px solid transparent;
        position: absolute;
        height: 0;
        width: 0;
        left: -30px;
        top: 50%;
        margin-top: -8px;
    }
    nav li time {
        display: block;
        font-size: .9em;
        opacity: .7;
    }
    nav li time em {
        margin-left: 5px;
        color: white;
        font-style: normal;
}

main {
        margin-left: 200px;
    }
    main article {
        position: relative;
        transition: background-color .5s;
    }
    main .image {
        position: relative;
        overflow: hidden;
    }
    main .image img {
        width: 100%;
    }
    main .image ul {
        list-style: none;
        position: absolute;
        right: 0;
        top: -3px;
        font-size: .9em;
        transition: top .2s;
    }
    main .image:hover ul {
        top: 0;
    }
    main .image li {
        display: inline-block;
        margin-left: .1em;
    }
    main .image ul a {
        display: inline-block;
        padding: .1em .5em;
        min-width: 1em;
        background: #181818;
        opacity: 0;
        text-align: center;
        text-decoration: none;
        transition: opacity .2s;
    }
    main .image:hover ul a {
        opacity: .7;
    }
    main .image:hover ul a:hover, main .image:hover ul a:focus {
        opacity: .9;
    }
    main .description {
        transition: background-color .5s;
    }
    main aside {
        position: relative;
        box-sizing: border-box;
        padding: 3em;
        width: 66%;
    }
    main article:nth-child(odd) aside {
        left: 34%;
        text-align: right;
}

.imageset.render {
        position: relative;
        overflow: hidden;
    }
    .imageset.render .progress {
        position: absolute;
        bottom: 0;
        left: 0;
        height: 5px;
        background: white;
        opacity: .3;
        z-index: 3;
        transition: width .5s;
    }
    .imageset.render article {
        position: relative;
        opacity: 1;
        z-index: 2;
        transition: opacity 1s, background-color .5s;
    }
    .imageset.render article.inactive {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        opacity: 0;
        z-index: 1;
}

@media screen and (max-width: 700px) {
    nav {
        position: relative;
        width: auto;
    }

    nav ol {
        margin-right: 70px;
    }

    nav img {
        left: auto;
        bottom: 40px;
        right: 30px;
        transform: none;
    }

    main {
        margin-left: 0;
    }

    main aside, main article:nth-child(odd) aside {
        left: 0;
        width: 100%;
        padding: 2em;
        text-align: left;
    }
}

